Fixing offer trash not visible, the whole offer block isn't relatively positioned

--- a/main/src/offerdiary/WebContent/offers/css/offer.css
+++ b/main/src/offerdiary/WebContent/offers/css/offer.css
@@ -25,3 +25,8 @@
 	min-height: 100px;
 	
 }
+
+.eachOfferRow {
+	
+	
+}
